--- a/source/support/spring/pom.xml
+++ b/source/support/spring/pom.xml
@@ -18,6 +18,20 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jrcp-core</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
 </project>
